staking fix: fixed version box alignment

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -85,6 +85,7 @@ body {
 
 .devnet-container {
   width: 100%;
+  max-width: $pg-col;
   margin: 0 auto;
   padding-top: $mr-lg;
 
